--- a/Makefile_orig
+++ b/Makefile_orig
@@ -1,13 +1,13 @@
-PREFIX = /usr/local
-SBIN   = $(PREFIX)/sbin
-SYSTEM = $(PREFIX)/lib/systemd/system
-MAN    = $(PREFIX)/share/man
+PREFIX ?= /usr/local
+SBIN   ?= $(PREFIX)/sbin
+SYSTEM ?= $(PREFIX)/lib/systemd/system
+MAN    ?= $(PREFIX)/share/man
 
-UNITS = systemd/corridor-data.service \
-        systemd/corridor-init-forwarding.service \
-        systemd/corridor-init-logged.service \
-        systemd/corridor-init-snat.service \
-        systemd/corridor.target
+UNITS ?= systemd/corridor-data.service \
+         systemd/corridor-init-forwarding.service \
+         systemd/corridor-init-logged.service \
+         systemd/corridor-init-snat.service \
+         systemd/corridor.target
 
 default: man/corridor.8
 
@@ -22,7 +22,7 @@ systemd-units: $(UNITS)
 	ronn -r $<
 
 install: man/corridor.8
-	install -d $(DESTDIR)$(SBIN) $(DESTDIR)$(MAN)/man8 $(DESTDIR)/etc/corridor.d $(DESTDIR)/var/lib/corridor $(DESTDIR)/usr/local/etc/corridor.d
+	install -d $(DESTDIR)$(SBIN) $(DESTDIR)$(MAN)/man8 $(DESTDIR)/etc/corridor.d $(DESTDIR)/var/lib/corridor
 	install sbin/* $(DESTDIR)$(SBIN)
 	install -m 644 man/corridor.8 $(DESTDIR)$(MAN)/man8
 	for f in sbin/*; do ln -sf corridor.8 $(DESTDIR)$(MAN)/man8/$${f##*/}.8; done
