--- a/qubes/corridor.d/31-state-qubes.conf
+++ b/qubes/corridor.d/31-state-qubes.conf
@@ -1,1 +1,4 @@
-RELAYS_STATE=/rw/corridor_relays
+#!/bin/sh
+if command -v qubesdb-read 1>/dev/null 2>&1 ; then
+   RELAYS_STATE=/rw/corridor_relays
+fi
