--- a/qubes/corridor.d/91-network-qubes.conf
+++ b/qubes/corridor.d/91-network-qubes.conf
@@ -1,2 +1,5 @@
-SNAT="10.137.0.0/16"
-LOGGED="10.137.0.0/16"
+#!/bin/sh
+if command -v qubesdb-read 1>/dev/null 2>&1 ; then
+   SNAT="10.137.0.0/16"
+   LOGGED="10.137.0.0/16"
+fi
