--- a/debian/control
+++ b/debian/control
@@ -33,4 +33,4 @@ Description: Tor traffic whitelisting gateway
  .
  You can think of it as defense in depth for your vanilla Tor Browser or Tails,
  for your beautiful scary experimental Qubes proxying schemes, etc. Or invite
- the hood to use your WiFi without getting into trouble.
+ the hood to use your Wi-Fi without getting into trouble.
